src/objects/Strategic_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Team__c</fullName>
        <label>Account Team</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Accounts</relationshipLabel>
        <relationshipName>Strategic_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Objective_1__c</fullName>
        <label>Business Objective #1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Objective_2__c</fullName>
        <label>Business Objective #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Objective_3__c</fullName>
        <label>Business Objective #3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C1_Role__c</fullName>
        <label>C1-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Personal Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C1_Title__c</fullName>
        <formula>Contact_1__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C1-Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_Role__c</fullName>
        <label>C2-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Personal Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C2_Title__c</fullName>
        <formula>Contact_2__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C2-Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_Role__c</fullName>
        <label>C3-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Personal Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C4_Title__c</fullName>
        <formula>Contact_4__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C4-Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Background__c</fullName>
        <label>Company Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact #1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategic Accounts</relationshipLabel>
        <relationshipName>Strategic_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact #2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategic Accounts (Contact #2)</relationshipLabel>
        <relationshipName>Strategic_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact #3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategic Accounts (Contact #3)</relationshipLabel>
        <relationshipName>Strategic_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>Contact_3__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C3-Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Issues__c</fullName>
        <inlineHelpText>Please indicate the date of your Issue.</inlineHelpText>
        <label>Current Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Future_Potential__c</fullName>
        <inlineHelpText>Please enter the date for each of your entries.</inlineHelpText>
        <label>Future Potential</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT( Account__r.Industry )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justificaion__c</fullName>
        <label>Justificaion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_1__c</fullName>
        <label>Milestone #1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_2__c</fullName>
        <label>Milestone #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_3__c</fullName>
        <label>Milestone #3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Misc_Stuff__c</fullName>
        <label>Misc Stuff</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Locations__c</fullName>
        <label>Other Locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Objective_1__c</fullName>
        <label>Relationship Objective #1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Objective_2__c</fullName>
        <label>Relationship Objective #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_CYFC__c</fullName>
        <label>Sales CYFC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_CY__c</fullName>
        <label>Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_LY__c</fullName>
        <label>Sales LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_PY2__c</fullName>
        <label>Sales PY2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_B_1__c</fullName>
        <label>Status B-1</label>
        <picklist>
            <picklistValues>
                <fullName>On Target - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Schedule - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_B_2__c</fullName>
        <label>Status B-2</label>
        <picklist>
            <picklistValues>
                <fullName>On Target - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Schedule - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_B_3__c</fullName>
        <label>Status B-3</label>
        <picklist>
            <picklistValues>
                <fullName>On Target - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Schedule - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_MS_1__c</fullName>
        <label>Status MS-1</label>
        <picklist>
            <picklistValues>
                <fullName>On Target - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Schedule - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_MS_2__c</fullName>
        <label>Status MS-2</label>
        <picklist>
            <picklistValues>
                <fullName>On Target - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Schedule - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_MS_3__c</fullName>
        <label>Status MS-3</label>
        <picklist>
            <picklistValues>
                <fullName>On Target - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Schedule - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_R_1__c</fullName>
        <label>Status R-1</label>
        <picklist>
            <picklistValues>
                <fullName>On Target - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Schedule - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Successful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_R_2__c</fullName>
        <label>Status R-2</label>
        <picklist>
            <picklistValues>
                <fullName>On Target - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Schedule - Achievable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Successful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Proposition__c</fullName>
        <label>Value Proposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Strategic Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Strategic_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>Strategic Accounts</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Strategic Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>